[package]
name = "progetto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
eframe = { version = "0.22.0", features = ["__screenshot", "wgpu"] }
egui = "0.22.0"
env_logger = "0.10.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif"] }
screenshots = "0.6.0"
serde = { version = "1.0.167", features = ["derive"]}
confy = "0.5.1"
chrono = "0.4.26"
global-hotkey = "0.2.3"
arboard = "3.2.0"
egui_wgpu_backend = "0.24.0"

